crates/monitrs-tui/tests/snapshots/view_snapshots__the_cpu_screen_states_the_ceiling_a_container_actually_has.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
expression: text
---
|+ monitrs  host:dev-mbp  [>LIVE]  1s  up 3d 04:12 ---------------------------------------------------------------------------- 00:00:23Z --+|
|| CPU   79% [###############################################=------------]  load  4.12 3.84 3.21  8 cpu  8 core  cgroup 1.5 cpu  temp 62.5C||
|| MEM   71% [##########################################=-----------------]  23G/32G  swap 205M/2.0G  cgroup 2.0G  bat 82%-                 ||
|+ CPU -------------------------------------------------------------------------------- 8 logical  8 physical  cgroup 1.5 CPUs  3200 MHz ---+|
|| TOTAL  79% [##################################################################################################=-------------------------]||
|| LOAD     4.12   3.84   3.21    over 8 host cores: 0.51 per core                                                                          ||
|+------------------------------------------------------------------------------------------------------------------------------------------+|
|+ PERFORMANCE --------------------------------------------------------------------------------------------------------------- 6 logical ---+|
|| 0     49% [#############################################################=---------------------------------------------------------------]||
|| 1     69% [######################################################################################=--------------------------------------]||
|| 2     89% [###############################################################################################################=-------------]||
|| 3    100% [#############################################################################################################################]||
|| 4     49% [#############################################################=---------------------------------------------------------------]||
|| 5     69% [######################################################################################=--------------------------------------]||
|+------------------------------------------------------------------------------------------------------------------------------------------+|
|+ EFFICIENCY ---------------------------------------------------------------------------------------------------------------- 2 logical ---+|
|| 6     89% [###############################################################################################################=-------------]||
|| 7    100% [#############################################################################################################################]||
|+------------------------------------------------------------------------------------------------------------------------------------------+|
|+ BUSIEST PROCESSES ----------------------------------------------------------------------------------------------------------- 5 total ---+|
||  CPU%      PID NAME                                                                                                                      ||
||  120%    31842 rustc                                                                                                                     ||
||   54%     1221 postgres                                                                                                                  ||
||   21%      507 WindowServer                                                                                                              ||
||   12%     9182 node                                                                                                                      ||
||  0.1%        1 launchd                                                                                                                   ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
|+------------------------------------------------------------------------------------------------------------------------------------------+|
| 1 Overview  2 Processes [3 CPU] 4 Storage  5 Network  6 Inspect                                                            / filter  ? help|
