crates/monitrs-tui/tests/snapshots/view_snapshots__the_cpu_screen_while_warming_up.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
expression: text
---
|+ monitrs  host:dev-mbp  [>LIVE]  1s  up 3d 04:12 ---------------------------------------------------------------------------- 00:00:00Z --+|
|| CPU .warming up [......................................................................................]  load .warming up  8 cpu  8 core||
|| MEM .warming up [......................................................................................]  .warming up/32G  swap 205M/2.0G||
|+ CPU ------------------------------------------------------------------------------------------------- 8 logical  8 physical  3200 MHz ---+|
|| TOTAL.warming up [......................................................................................................................]||
|| LOAD  warming up                                                                                                                         ||
|+------------------------------------------------------------------------------------------------------------------------------------------+|
|+ CORES -----------------------------------------------------------------------------------------------------------------------------------+|
|| warming up                                                                                                                               ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
|+------------------------------------------------------------------------------------------------------------------------------------------+|
|+ BUSIEST PROCESSES ----------------------------------------------------------------------------------------------------------- 5 total ---+|
||  CPU%      PID NAME                                                                                                                      ||
||   n/a        1 launchd                                                                                                                   ||
||   n/a      507 WindowServer                                                                                                              ||
||   n/a     1221 postgres                                                                                                                  ||
||   n/a     9182 node                                                                                                                      ||
||   n/a    31842 rustc                                                                                                                     ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
|+------------------------------------------------------------------------------------------------------------------------------------------+|
| 1 Overview  2 Processes [3 CPU] 4 Storage  5 Network  6 Inspect  7 Battery                                                 / filter  ? help|
