crates/monitrs-tui/tests/snapshots/view_snapshots__the_inspect_screen_in_a_container.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
expression: text
---
|+ monitrs  host:dev-mbp  [>LIVE]  1s  up 3d 04:12 ---------------------------------------------------------------------------- 00:00:23Z --+|
|| CPU   79% [############################################################=---------------]  load  4.12 3.84 3.21  8 cpu  8 core  temp 62.5C||
|| MEM   71% [#####################################################=----------------------]  23G/32G  swap 205M/2.0G  cgroup 2.0G  bat 82%- ||
|+ SYSTEM -------------------------------------------------------------+ DIAGNOSTICS -------------------------------------------------------+|
||  host         dev-mbp                                               |PRESSURE                                                            ||
||  os           fake-os 1.0                                           |? NET     link speed unknown       18M/s                            ||
||  kernel       fake-kernel 1.0                                       |? PSI-CPU warming up             warming                            ||
||  arch         aarch64                                               |? PSI-MEM warming up             warming                            ||
||  uptime       3d 04:12 (booted 00:00:00Z)                           |? PSI-IO  warming up             warming                            ||
||  cpu          8 logical, 8 physical                                 |UNAVAILABLE METRICS                                                 ||
||  cpu model    Fake CPU at 3200 MHz                                  |  - CPU time breakdown      unsupported                             ||
||  memory       32 GiB total, swap 2.0 GiB                            |  - swap activity           unsupported                             ||
||  semantics    cross-platform baseline; c...r-byte comparable with it|  - disk busy               unsupported                             ||
||  cgroup limit 2.0G                                                  |  - network link speed      unsupported                             ||
||  environment  container (heuristic, high confidence: synthetic sc...|  - Linux PSI               unsupported                             ||
||COLLECTOR                                                            |  - process signals         unsupported                             ||
||  fast         not sampled yet                                       |  - renice                  unsupported                             ||
||  medium       not sampled yet                                       |STALE DATA                                                          ||
||  slow         not sampled yet                                       |  every headline metric is fresh                                    ||
||  on demand    not sampled yet                                       |COLLECTOR ERRORS                                                    ||
||RENDER                                                               |  none recorded                                                     ||
||  frames       1, 0 over budget                                      |NOTICES                                                             ||
||  duration     last 4ms max 4ms p95 4ms of 16ms budget               |  none                                                              ||
||  frame gap    n/a                                                   |SAMPLING                                                            ||
||OWN OVERHEAD                                                         |  interval     1s                                                   ||
||  not measured yet                                                   |  dropped      0                                                    ||
|+ SELECTED PROCESS --------------------------------- 9 of 12 lines ---|  coalesced    23                                                   ||
||  identity     31842 (start key 900100)                              |  lag          0ms                                                  ||
||  name         rustc                                                 |  history      24 samples of 300, 190K                              ||
||  executable   /usr/bin/rustc                                        |                                                                    ||
||  command      cargo build --release                                 |                                                                    ||
||  state        sleeping                                              |                                                                    ||
||  user         gabor                                                 |                                                                    ||
||  cpu          120%                                                  |                                                                    ||
||  memory       2.6G rss, 16G virt, 8.1% of total                     |                                                                    ||
||  disk         21M/s read, 42M/s write (60G / 120G total)            |                                                                    ||
|+---------------------------------------------------------------------+--------------------------------------------------------------------+|
| 1 Overview  2 Processes  3 Storage  4 Network [5 Inspect]                                                                  / filter  ? help|
