crates/monitrs-tui/tests/snapshots/view_snapshots__the_inspect_screen_in_one_column.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
expression: "text_of(&frame(&state, ascii()))"
---
|+ monitrs  host:dev-mbp  [>LIVE]  1s  lag 1400ms  up 3d 04:12 -------------- 00:00:23Z --+|
| CPU 79%  MEM 71%  load  4.12 3.84 3.21  23G/32G  swap 205M/2.0G  dsk r18M/s w42M/s       |
|+ SYSTEM -------------------------------------------------------------- 6 of 23 lines ---+|
||  host         dev-mbp                                                                  ||
||  os           fake-os 1.0                                                              ||
||  kernel       fake-kernel 1.0                                                          ||
||  arch         aarch64                                                                  ||
||  uptime       3d 04:12 (booted 00:00:00Z)                                              ||
||  cpu          8 logical, 8 physical                                                    ||
|+ SELECTED PROCESS ---------------------------------------------------- 6 of 12 lines ---+|
||  identity     31842 (start key 900100)                                                 ||
||  name         rustc                                                                    ||
||  executable   /usr/bin/rustc                                                           ||
||  command      cargo build --release                                                    ||
||  state        sleeping                                                                 ||
||  user         gabor                                                                    ||
|+ DIAGNOSTICS --------------------------------------------------------- 7 of 27 lines ---+|
||PRESSURE                                                                                ||
||? NET     link speed unknown       18M/s                                                ||
||? PSI-CPU warming up             warming                                                ||
||? PSI-MEM warming up             warming                                                ||
||? PSI-IO  warming up             warming                                                ||
||UNAVAILABLE METRICS                                                                     ||
||  - CPU time breakdown      unsupported                                                 ||
|+----------------------------------------------------------------------------------------+|
| 1  2  3  4  5 [6 Inspect] 7                                              / filter  ? help|
