crates/monitrs-tui/tests/snapshots/view_snapshots__the_network_screen.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
assertion_line: 716
expression: text
---
|+ monitrs  host:dev-mbp  [>LIVE]  1s  up 3d 04:12 ---------------------------------------------------------------------------- 00:00:23Z --+|
|| CPU   79% [############################################################=---------------]  load  4.12 3.84 3.21  8 cpu  8 core  temp 62.5C||
|| MEM   71% [#####################################################=----------------------]  23G/32G  swap 205M/2.0G  bat 82%-              ||
|+ INTERFACES ------------------------------------------------------------------------------------------------------------------ 2 links ---+|
||IFACE    STATE    ADDRESS                 RX/s    TX/s    RX pps    TX pps      ERR     DROP   UTIL                                       ||
||en0      +up      192.168.1.42/24        18M/s  2.3M/s     14200      3100        0        0    n/a                                       ||
||lo0      +up      127.0.0.1/8            42K/s   42K/s       120       120        0        0    n/a                                       ||
||                                                                                                                                          ||
|+ TOTALS ----------------------------------------------------------------------------- since launch and OS counter are separate figures ---+|
||en0      launch rx 414M tx 46M (326600 / 71300 pkt)  |  os rx 900G tx 120G (9326600 / 1271300 pkt)                                        ||
||lo0      launch rx 0B tx 0B (0 / 0 pkt)  |  os rx 0B tx 0B (0 / 0 pkt)                                                                    ||
||                                                                                                                                          ||
|+ THROUGHPUT HISTORY 5m ------------------------------------------------------------------------------------------------- RX peak 18M/s ---+|
|| RX                                                                                                                @@@@@@@@@@@@@@@@@@@@@@@||
|| TX                                                                                                                @@@@@@@@@@@@@@@@@@@@@@@||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
|+------------------------------------------------------------------------------------------------------------------------------------------+|
| 1 Overview  2 Processes  3 Storage [4 Network] 5 Inspect                                                                   / filter  ? help|
